parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> item_list
Rule 2     program -> empty
Rule 3     item_list -> item_list item
Rule 4     item_list -> item
Rule 5     item -> statement
Rule 6     item -> function_decl
Rule 7     item -> record_decl
Rule 8     type -> INT
Rule 9     type -> FLOAT
Rule 10    type -> CHAR
Rule 11    type -> BOOLEAN
Rule 12    type -> VOID
Rule 13    type -> ID
Rule 14    record_decl -> RECORD ID L_PAREN param_list R_PAREN PUNTO_COMA
Rule 15    function_decl -> type ID L_PAREN param_list R_PAREN L_BRACKET statement_list R_BRACKET
Rule 16    param_list -> param_list_items
Rule 17    param_list -> empty
Rule 18    param_list_items -> param_list_items COMA param
Rule 19    param_list_items -> param
Rule 20    param -> type ID
Rule 21    statement_list -> statement_list statement
Rule 22    statement_list -> empty
Rule 23    statement -> var_declaration PUNTO_COMA
Rule 24    statement -> assignment PUNTO_COMA
Rule 25    statement -> if_statement
Rule 26    statement -> while_statement
Rule 27    statement -> do_while_statement
Rule 28    statement -> expression PUNTO_COMA
Rule 29    statement -> print_statement PUNTO_COMA
Rule 30    statement -> BREAK PUNTO_COMA
Rule 31    statement -> RETURN expression PUNTO_COMA
Rule 32    statement -> RETURN PUNTO_COMA
Rule 33    statement -> PUNTO_COMA
Rule 34    print_statement -> PRINT L_PAREN expression R_PAREN
Rule 35    var_declaration -> type id_list
Rule 36    var_declaration -> type ID ASIGNACION expression
Rule 37    id_list -> id_list COMA ID
Rule 38    id_list -> ID
Rule 39    assignment -> location ASIGNACION expression
Rule 40    location -> ID
Rule 41    location -> location PUNTO ID
Rule 42    expression -> expression SUMA expression
Rule 43    expression -> expression RESTA expression
Rule 44    expression -> expression MUL expression
Rule 45    expression -> expression DIV expression
Rule 46    expression -> expression MAYOR expression
Rule 47    expression -> expression MAYOR_IGUAL expression
Rule 48    expression -> expression MENOR expression
Rule 49    expression -> expression MENOR_IGUAL expression
Rule 50    expression -> expression EQUALS expression
Rule 51    expression -> expression AND expression
Rule 52    expression -> expression OR expression
Rule 53    expression -> NOT expression
Rule 54    expression -> RESTA expression
Rule 55    expression -> NEW ID L_PAREN arg_list R_PAREN
Rule 56    expression -> ID L_PAREN arg_list R_PAREN
Rule 57    expression -> INT_VALUE
Rule 58    expression -> FLOAT_VALUE
Rule 59    expression -> CHAR_VALUE
Rule 60    expression -> TRUE
Rule 61    expression -> FALSE
Rule 62    expression -> location
Rule 63    arg_list -> arg_list_items
Rule 64    arg_list -> empty
Rule 65    arg_list_items -> arg_list_items COMA expression
Rule 66    arg_list_items -> expression
Rule 67    if_statement -> IF L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET ELSE L_BRACKET statement_list R_BRACKET
Rule 68    if_statement -> IF L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET
Rule 69    while_statement -> WHILE L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET
Rule 70    do_while_statement -> DO L_BRACKET statement_list R_BRACKET WHILE L_PAREN expression R_PAREN PUNTO_COMA
Rule 71    empty -> <empty>

Terminals, with rules where they appear

AND                  : 51
ASIGNACION           : 36 39
BOOLEAN              : 11
BREAK                : 30
CHAR                 : 10
CHAR_VALUE           : 59
COMA                 : 18 37 65
DIV                  : 45
DO                   : 70
ELSE                 : 67
EQUALS               : 50
FALSE                : 61
FLOAT                : 9
FLOAT_VALUE          : 58
ID                   : 13 14 15 20 36 37 38 40 41 55 56
IF                   : 67 68
INT                  : 8
INT_VALUE            : 57
L_BRACKET            : 15 67 67 68 69 70
L_PAREN              : 14 15 34 55 56 67 68 69 70
MAYOR                : 46
MAYOR_IGUAL          : 47
MENOR                : 48
MENOR_IGUAL          : 49
MUL                  : 44
NEW                  : 55
NOT                  : 53
OR                   : 52
PRINT                : 34
PUNTO                : 41
PUNTO_COMA           : 14 23 24 28 29 30 31 32 33 70
RECORD               : 14
RESTA                : 43 54
RETURN               : 31 32
R_BRACKET            : 15 67 67 68 69 70
R_PAREN              : 14 15 34 55 56 67 68 69 70
SUMA                 : 42
TRUE                 : 60
VOID                 : 12
WHILE                : 69 70
error                : 

Nonterminals, with rules where they appear

arg_list             : 55 56
arg_list_items       : 63 65
assignment           : 24
do_while_statement   : 27
empty                : 2 17 22 64
expression           : 28 31 34 36 39 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 65 66 67 68 69 70
function_decl        : 6
id_list              : 35 37
if_statement         : 25
item                 : 3 4
item_list            : 1 3
location             : 39 41 62
param                : 18 19
param_list           : 14 15
param_list_items     : 16 18
print_statement      : 29
program              : 0
record_decl          : 7
statement            : 5 21
statement_list       : 15 21 67 67 68 69 70
type                 : 15 20 35 36
var_declaration      : 23
while_statement      : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . item_list
    (2) program -> . empty
    (3) item_list -> . item_list item
    (4) item_list -> . item
    (71) empty -> .
    (5) item -> . statement
    (6) item -> . function_decl
    (7) item -> . record_decl
    (23) statement -> . var_declaration PUNTO_COMA
    (24) statement -> . assignment PUNTO_COMA
    (25) statement -> . if_statement
    (26) statement -> . while_statement
    (27) statement -> . do_while_statement
    (28) statement -> . expression PUNTO_COMA
    (29) statement -> . print_statement PUNTO_COMA
    (30) statement -> . BREAK PUNTO_COMA
    (31) statement -> . RETURN expression PUNTO_COMA
    (32) statement -> . RETURN PUNTO_COMA
    (33) statement -> . PUNTO_COMA
    (15) function_decl -> . type ID L_PAREN param_list R_PAREN L_BRACKET statement_list R_BRACKET
    (14) record_decl -> . RECORD ID L_PAREN param_list R_PAREN PUNTO_COMA
    (35) var_declaration -> . type id_list
    (36) var_declaration -> . type ID ASIGNACION expression
    (39) assignment -> . location ASIGNACION expression
    (67) if_statement -> . IF L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET ELSE L_BRACKET statement_list R_BRACKET
    (68) if_statement -> . IF L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET
    (69) while_statement -> . WHILE L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET
    (70) do_while_statement -> . DO L_BRACKET statement_list R_BRACKET WHILE L_PAREN expression R_PAREN PUNTO_COMA
    (42) expression -> . expression SUMA expression
    (43) expression -> . expression RESTA expression
    (44) expression -> . expression MUL expression
    (45) expression -> . expression DIV expression
    (46) expression -> . expression MAYOR expression
    (47) expression -> . expression MAYOR_IGUAL expression
    (48) expression -> . expression MENOR expression
    (49) expression -> . expression MENOR_IGUAL expression
    (50) expression -> . expression EQUALS expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . NOT expression
    (54) expression -> . RESTA expression
    (55) expression -> . NEW ID L_PAREN arg_list R_PAREN
    (56) expression -> . ID L_PAREN arg_list R_PAREN
    (57) expression -> . INT_VALUE
    (58) expression -> . FLOAT_VALUE
    (59) expression -> . CHAR_VALUE
    (60) expression -> . TRUE
    (61) expression -> . FALSE
    (62) expression -> . location
    (34) print_statement -> . PRINT L_PAREN expression R_PAREN
    (8) type -> . INT
    (9) type -> . FLOAT
    (10) type -> . CHAR
    (11) type -> . BOOLEAN
    (12) type -> . VOID
    (13) type -> . ID
    (40) location -> . ID
    (41) location -> . location PUNTO ID

    $end            reduce using rule 71 (empty -> .)
    BREAK           shift and go to state 16
    RETURN          shift and go to state 17
    PUNTO_COMA      shift and go to state 9
    RECORD          shift and go to state 20
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    DO              shift and go to state 24
    NOT             shift and go to state 26
    RESTA           shift and go to state 25
    NEW             shift and go to state 27
    ID              shift and go to state 19
    INT_VALUE       shift and go to state 28
    FLOAT_VALUE     shift and go to state 29
    CHAR_VALUE      shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    PRINT           shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    CHAR            shift and go to state 36
    BOOLEAN         shift and go to state 37
    VOID            shift and go to state 38

    program                        shift and go to state 1
    item_list                      shift and go to state 2
    empty                          shift and go to state 3
    item                           shift and go to state 4
    statement                      shift and go to state 5
    function_decl                  shift and go to state 6
    record_decl                    shift and go to state 7
    var_declaration                shift and go to state 8
    assignment                     shift and go to state 10
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12
    do_while_statement             shift and go to state 13
    expression                     shift and go to state 14
    print_statement                shift and go to state 15
    type                           shift and go to state 18
    location                       shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> item_list .
    (3) item_list -> item_list . item
    (5) item -> . statement
    (6) item -> . function_decl
    (7) item -> . record_decl
    (23) statement -> . var_declaration PUNTO_COMA
    (24) statement -> . assignment PUNTO_COMA
    (25) statement -> . if_statement
    (26) statement -> . while_statement
    (27) statement -> . do_while_statement
    (28) statement -> . expression PUNTO_COMA
    (29) statement -> . print_statement PUNTO_COMA
    (30) statement -> . BREAK PUNTO_COMA
    (31) statement -> . RETURN expression PUNTO_COMA
    (32) statement -> . RETURN PUNTO_COMA
    (33) statement -> . PUNTO_COMA
    (15) function_decl -> . type ID L_PAREN param_list R_PAREN L_BRACKET statement_list R_BRACKET
    (14) record_decl -> . RECORD ID L_PAREN param_list R_PAREN PUNTO_COMA
    (35) var_declaration -> . type id_list
    (36) var_declaration -> . type ID ASIGNACION expression
    (39) assignment -> . location ASIGNACION expression
    (67) if_statement -> . IF L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET ELSE L_BRACKET statement_list R_BRACKET
    (68) if_statement -> . IF L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET
    (69) while_statement -> . WHILE L_PAREN expression R_PAREN L_BRACKET statement_list R_BRACKET
    (70) do_while_statement -> . DO L_BRACKET statement_list R_BRACKET WHILE L_PAREN expression R_PAREN PUNTO_COMA
    (42) expression -> . expression SUMA expression
    (43) expression -> . expression RESTA expression
    (44) expression -> . expression MUL expression
    (45) expression -> . expression DIV expression
    (46) expression -> . expression MAYOR expression
    (47) expression -> . expression MAYOR_IGUAL expression
    (48) expression -> . expression MENOR expression
    (49) expression -> . expression MENOR_IGUAL expression
    (50) expression -> . expression EQUALS expression
    (51) expression -> . expression AND expression
    (52) expression -> . expression OR expression
    (53) expression -> . NOT expression
    (54) expression -> . RESTA expression
    (55) expression -> . NEW ID L_PAREN arg_list R_PAREN
    (56) expression -> . ID L_PAREN arg_list R_PAREN
    (57) expression -> . INT_VALUE
    (58) expression -> . FLOAT_VALUE
    (59) expression -> . CHAR_VALUE
    (60) expression -> . TRUE
    (61) expression -> . FALSE
    (62) expression -> . location
    (34) print_statement -> . PRINT L_PAREN expression R_PAREN
    (8) type -> . INT
    (9) type -> . FLOAT
    (10) type -> . CHAR
    (11) type -> . BOOLEAN
    (12) type -> . VOID
    (13) type -> . ID
    (40) location -> . ID
    (41) location -> . location PUNTO ID

    $end            reduce using rule 1 (program -> item_list .)
    BREAK           shift and go to state 16
    RETURN          shift and go to state 17
    PUNTO_COMA      shift and go to state 9
    RECORD          shift and go to state 20
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    DO              shift and go to state 24
    NOT             shift and go to state 26
    RESTA           shift and go to state 25
    NEW             shift and go to state 27
    ID              shift and go to state 19
    INT_VALUE       shift and go to state 28
    FLOAT_VALUE     shift and go to state 29
    CHAR_VALUE      shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    PRINT           shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    CHAR            shift and go to state 36
    BOOLEAN         shift and go to state 37
    VOID            shift and go to state 38

    item                           shift and go to state 39
    statement                      shift and go to state 5
    function_decl                  shift and go to state 6
    record_decl                    shift and go to state 7
    var_declaration                shift and go to state 8
    assignment                     shift and go to state 10
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12
    do_while_statement             shift and go to state 13
    expression                     shift and go to state 14
    print_statement                shift and go to state 15
    type                           shift and go to state 18
    location                       shift and go to state 21

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (4) item_list -> item .

    BREAK           reduce using rule 4 (item_list -> item .)
    RETURN          reduce using rule 4 (item_list -> item .)
    PUNTO_COMA      reduce using rule 4 (item_list -> item .)
    RECORD          reduce using rule 4 (item_list -> item .)
    IF              reduce using rule 4 (item_list -> item .)
    WHILE           reduce using rule 4 (item_list -> item .)
    DO              reduce using rule 4 (item_list -> item .)
    NOT             reduce using rule 4 (item_list -> item .)
    RESTA           reduce using rule 4 (item_list -> item .)
    NEW             reduce using rule 4 (item_list -> item .)
    ID              reduce using rule 4 (item_list -> item .)
    INT_VALUE       reduce using rule 4 (item_list -> item .)
    FLOAT_VALUE     reduce using rule 4 (item_list -> item .)
    CHAR_VALUE      reduce using rule 4 (item_list -> item .)
    TRUE            reduce using rule 4 (item_list -> item .)
    FALSE           reduce using rule 4 (item_list -> item .)
    PRINT           reduce using rule 4 (item_list -> item .)
    INT             reduce using rule 4 (item_list -> item .)
    FLOAT           reduce using rule 4 (item_list -> item .)
    CHAR            reduce using rule 4 (item_list -> item .)
    BOOLEAN         reduce using rule 4 (item_list -> item .)
    VOID            reduce using rule 4 (item_list -> item .)
    $end            reduce using rule 4 (item_list -> item .)


state 5

    (5) item -> statement .

    BREAK           reduce using rule 5 (item -> statement .)
    RETURN          reduce using rule 5 (item -> statement .)
    PUNTO_COMA      reduce using rule 5 (item -> statement .)
    RECORD          reduce using rule 5 (item -> statement .)
    IF              reduce using rule 5 (item -> statement .)
    WHILE           reduce using rule 5 (item -> statement .)
    DO              reduce using rule 5 (item -> statement .)
    NOT             reduce using rule 5 (item -> statement .)
    RESTA           reduce using rule 5 (item -> statement .)
    NEW             reduce using rule 5 (item -> statement .)
    ID              reduce using rule 5 (item -> statement .)
    INT_VALUE       reduce using rule 5 (item -> statement .)
    FLOAT_VALUE     reduce using rule 5 (item -> statement .)
    CHAR_VALUE      reduce using rule 5 (item -> statement .)
    TRUE            reduce using rule 5 (item -> statement .)
    FALSE           reduce using rule 5 (item -> statement .)
    PRINT           reduce using rule 5 (item -> statement .)
    INT             reduce using rule 5 (item -> statement .)
    FLOAT           reduce using rule 5 (item -> statement .)
    CHAR            reduce using rule 5 (item -> statement .)
    BOOLEAN         reduce using rule 5 (item -> statement .)
    VOID            reduce using rule 5 (item -> statement .)
    $end            reduce using rule 5 (item -> statement .)


state 6

    (6) item -> function_decl .

    BREAK           reduce using rule 6 (item -> function_decl .)
    RETURN          reduce using rule 6 (item -> function_decl .)
    PUNTO_COMA      reduce using rule 6 (item -> function_decl .)
    RECORD          reduce using rule 6 (item -> function_decl .)
    IF              reduce using rule 6 (item -> function_decl .)
    WHILE           reduce using rule 6 (item -> function_decl .)
    DO              reduce using rule 6 (item -> function_decl .)
    NOT             reduce using rule 6 (item -> function_decl .)
    RESTA           reduce using rule 6 (item -> function_decl .)
    NEW             reduce using rule 6 (item -> function_decl .)
    ID              reduce using rule 6 (item -> function_decl .)
    INT_VALUE       reduce using rule 6 (item -> function_decl .)
    FLOAT_VALUE     reduce using rule 6 (item -> function_decl .)
    CHAR_VALUE      reduce using rule 6 (item -> function_decl .)
    TRUE            reduce using rule 6 (item -> function_decl .)
    FALSE           reduce using rule 6 (item -> function_decl .)
    PRINT           reduce using rule 6 (item -> function_decl .)
    INT             reduce using rule 6 (item -> function_decl .)
    FLOAT           reduce using rule 6 (item -> function_decl .)
    CHAR            reduce using rule 6 (item -> function_decl .)
    BOOLEAN         reduce using rule 6 (item -> function_decl .)
    VOID            reduce using rule 6 (item -> function_decl .)
    $end            reduce using rule 6 (item -> function_decl .)


state 7

    (7) item -> record_decl .

    BREAK           reduce using rule 7 (item -> record_decl .)
    RETURN          reduce using rule 7 (item -> record_decl .)
    PUNTO_COMA      reduce using rule 7 (item -> record_decl .)
    RECORD          reduce using rule 7 (item -> record_decl .)
    IF              reduce using rule 7 (item -> record_decl .)
    WHILE           reduce using rule 7 (item -> record_decl .)
    DO              reduce using rule 7 (item -> record_decl .)
    NOT             reduce using rule 7 (item -> record_decl .)
    RESTA           reduce using rule 7 (item -> record_decl .)
    NEW             reduce using rule 7 (item -> record_decl .)
    ID              reduce using rule 7 (item -> record_decl .)
    INT_VALUE       reduce using rule 7 (item -> record_decl .)
    FLOAT_VALUE     reduce using rule 7 (item -> record_decl .)
    CHAR_VALUE      reduce using rule 7 (item -> record_decl .)
    TRUE            reduce using rule 7 (item -> record_decl .)
    FALSE           reduce using rule 7 (item -> record_decl .)
    PRINT           reduce using rule 7 (item -> record_decl .)
    INT             reduce using rule 7 (item -> record_decl .)
    FLOAT           reduce using rule 7 (item -> record_decl .)
    CHAR            reduce using rule 7 (item -> record_decl .)
    BOOLEAN         reduce using rule 7 (item -> record_decl .)
    VOID            reduce using rule 7 (item -> record_decl .)
    $end            reduce using rule 7 (item -> record_decl .)


state 8

    (23) statement -> var_declaration . PUNTO_COMA

    PUNTO_COMA      shift and go to state 40


state 9

    (33) statement -> PUNTO_COMA .

    BREAK           reduce using rule 33 (statement -> PUNTO_COMA .)
    RETURN          reduce using rule 33 (statement -> PUNTO_COMA .)
    PUNTO_COMA      reduce using rule 33 (statement -> PUNTO_COMA .)
    RECORD          reduce using rule 33 (statement -> PUNTO_COMA .)
    IF              reduce using rule 33 (statement -> PUNTO_COMA .)
    WHILE           reduce using rule 33 (statement -> PUNTO_COMA .)
    DO              reduce using rule 33 (statement -> PUNTO_COMA .)
    NOT             reduce using rule 33 (statement -> PUNTO_COMA .)
    RESTA           reduce using rule 33 (statement -> PUNTO_COMA .)
    NEW             reduce using rule 33 (statement -> PUNTO_COMA .)
    ID              reduce using rule 33 (statement -> PUNTO_COMA .)
    INT_VALUE       reduce using rule 33 (statement -> PUNTO_COMA .)
    FLOAT_VALUE     reduce using rule 33 (statement -> PUNTO_COMA .)
    CHAR_VALUE      reduce using rule 33 (statement -> PUNTO_COMA .)
    TRUE            reduce using rule 33 (statement -> PUNTO_COMA .)
    FALSE           reduce using rule 33 (statement -> PUNTO_COMA .)
    PRINT           reduce using rule 33 (statement -> PUNTO_COMA .)
    INT             reduce using rule 33 (statement -> PUNTO_COMA .)
    FLOAT           reduce using rule 33 (statement -> PUNTO_COMA .)
    CHAR            reduce using rule 33 (statement -> PUNTO_COMA .)
    BOOLEAN         reduce using rule 33 (statement -> PUNTO_COMA .)
    VOID            reduce using rule 33 (statement -> PUNTO_COMA .)
    $end            reduce using rule 33 (statement -> PUNTO_COMA .)
    R_BRACKET       reduce using rule 33 (statement -> PUNTO_COMA .)


state 10

    (24) statement -> assignment . PUNTO_COMA

    PUNTO_COMA      shift and go to state 41


state 11

    (25) statement -> if_statement .

    BREAK           reduce using rule 25 (statement -> if_statement .)
    RETURN          reduce using rule 25 (statement -> if_statement .)
    PUNTO_COMA      reduce using rule 25 (statement -> if_statement .)
    RECORD          reduce using rule 25 (statement -> if_statement .)
    IF              reduce using rule 25 (statement -> if_statement .)
    WHILE           reduce using rule 25 (statement -> if_statement .)
    DO              reduce using rule 25 (statement -> if_statement .)
    NOT             reduce using rule 25 (statement -> if_statement .)
    RESTA           reduce using rule 25 (statement -> if_statement .)
    NEW             reduce using rule 25 (statement -> if_statement .)
    ID              reduce using rule 25 (statement -> if_statement .)
    INT_VALUE       reduce using rule 25 (statement -> if_statement .)
    FLOAT_VALUE     reduce using rule 25 (statement -> if_statement .)
    CHAR_VALUE      reduce using rule 25 (statement -> if_statement .)
    TRUE            reduce using rule 25 (statement -> if_statement .)
    FALSE           reduce using rule 25 (statement -> if_statement .)
    PRINT           reduce using rule 25 (statement -> if_statement .)
    INT             reduce using rule 25 (statement -> if_statement .)
    FLOAT           reduce using rule 25 (statement -> if_statement .)
    CHAR            reduce using rule 25 (statement -> if_statement .)
    BOOLEAN         reduce using rule 25 (statement -> if_statement .)
    VOID            reduce using rule 25 (statement -> if_statement .)
    $end            reduce using rule 25 (statement -> if_statement .)
    R_BRACKET       reduce using rule 25 (statement -> if_statement .)


state 12

    (26) statement -> while_statement .

    BREAK           reduce using rule 26 (statement -> while_statement .)
    RETURN          reduce using rule 26 (statement -> while_statement .)
    PUNTO_COMA      reduce using rule 26 (statement -> while_statement .)
    RECORD          reduce using rule 26 (statement -> while_statement .)
    IF              reduce using rule 26 (statement -> while_statement .)
    WHILE           reduce using rule 26 (statement -> while_statement .)
    DO              reduce using rule 26 (statement -> while_statement .)
    NOT             reduce using rule 26 (statement -> while_statement .)
    RESTA           reduce using rule 26 (statement -> while_statement .)
    NEW             reduce using rule 26 (statement -> while_statement .)
    ID              reduce using rule 26 (statement -> while_statement .)
    INT_VALUE       reduce using rule 26 (statement -> while_statement .)
    FLOAT_VALUE     reduce using rule 26 (statement -> while_statement .)
    CHAR_VALUE      reduce using rule 26 (statement -> while_statement .)
    TRUE            reduce using rule 26 (statement -> while_statement .)
    FALSE           reduce using rule 26 (statement -> while_statement .)
    PRINT           reduce using rule 26 (statement -> while_statement .)
    INT             reduce using rule 26 (statement -> while_statement .)
    FLOAT           reduce using rule 26 (statement -> while_statement .)
    CHAR            reduce using rule 26 (statement -> while_statement .)
    BOOLEAN         reduce using rule 26 (statement -> while_statement .)
    VOID            reduce using rule 26 (statement -> while_statement .)
    $end            reduce using rule 26 (statement -> while_statement .)
    R_BRACKET       reduce using rule 26 (statement -> while_statement .)


state 13

    (27) statement -> do_while_statement .
